Попробовал поправить плеер

--- a/discography.html
+++ b/discography.html
@@ -325,7 +325,7 @@
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery-modal-video.js"></script>
   <script>
-    $('a[data-video-id]').modalVideo();
+    new ModalVideo('a[data-video-id]');
   </script>
 </body>
 </html>
