--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="Two Winters Only, TWO, Russian, post-metal, non-metal, Pushchino">
   <link rel="stylesheet" href="styles/style.css?v3">
   <link rel="stylesheet" href="styles/jquery.fancybox.css">
+  <link rel="stylesheet" href="styles/modal-video.min.css">
   <link rel="shortcut icon" href="favicon.jpg">
   <link rel="apple-touch-icon" href="favicon.jpg">
   <script src="https://kit.fontawesome.com/63f6606447.js" crossorigin="anonymous"></script>
@@ -53,7 +54,7 @@
             <div class="release-info-desc">
               <ol class="release-info-list">
                 <li class="release-info-item release-play-button">
-                  <a target="_blank" href="https://youtu.be/KXmhltTxwOk?feature=shared">
+                  <a data-video-id="KXmhltTxwOk">
                     <span class="release-info-track">359</span>
                     <span class="release-info-duration">05:12</span>
                   </a>
@@ -125,5 +126,9 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery-modal-video.js"></script>
+  <script>
+    new ModalVideo('a[data-video-id]');
+  </script>
 </body>
 </html>
